# implementation_of_unconventional_algorithms

FractalLandscape/: CMakeLists.txt  FractalTerrain.cpp  FractalTerrain.h  Menu.cpp  Menu.h  main.cpp
HopfieldNetwork/: CMakeLists.txt  HopfieldNetwork.cpp  HopfieldNetwork.h  IDrawable.h  IFunction.h  Matrix.h  Menu.cpp  Menu.h  Picture.cpp  Picture.h  README.md  Signum.cpp  Signum.h  main.cpp
IFS/: CMakeLists.txt  IFS.cpp  IFS.h  IVisualizable.h  Matrix.h  main.cpp
LSystems/: CMakeLists.txt  LSystem.cpp  LSystem.h  Menu.cpp  Menu.h  Turtle.cpp  Turtle.h  main.cpp  raygui.h
PoleBalancingProblem/: Agent.cpp  Agent.h  CMakeLists.txt  Discretizer.h  Matrix.h  PoleBalancingProblem.cpp  PoleBalancingProblem.h  README.md  main.cpp
QLearning/: Agent.cpp  Agent.h  CMakeLists.txt  IDrawable.h  IVisualizable.h  Menu.cpp  Menu.h  QLearningVisualizer.cpp  QLearningVisualizer.h  gui_impl.cpp  main.cpp
perceptron/: CMakeLists.txt  IFunction.h  Perceptron.cpp  Perceptron.h  Point.h  PointLoader.cpp  PointLoader.h  PointSet.h  main.cpp  testingSet.txt  trainingSet.txt
simpleNeuralNetwork/: CMakeLists.txt  IFunction.h  NeuralNetwork.cpp  NeuralNetwork.h  Perceptron.cpp  Perceptron.h  Point.h  README.md  Sigmoid.cpp  Sigmoid.h  Signum.cpp  main.cpp
